--- a/src/css/App.css
+++ b/src/css/App.css
@@ -15,6 +15,9 @@
   min-height: 100vh;
   width: 100vw;
   overflow: hidden;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
 }
 
 h1, h2, h3, h4, a, button{
@@ -31,4 +34,10 @@ button{
 
 p, ::placeholder, input, textarea{
   font-family: 'Inria Sans', sans-serif;
+}
+
+.component-container{
+  width: 100%;
+  max-width: 1280px;
+  margin: auto;
 }
