--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,14 +1,23 @@
 footer{
-    height: 50vh;
+    width: 100vw;
+    height: fit-content;
     margin-top: 100px;
+    position: relative;
+    overflow: hidden;
+}
+
+.footer-wrapper{
     padding: 30px;
     display: flex;
     flex-flow: column;
     justify-content: space-evenly;
     align-items: center;
     gap: 30px;
-    overflow: hidden;
-    position: relative;
+    width: 100%;
+    height: 50vh;
+    max-height: 400px;
+    max-width: 1280px;
+    margin: auto;
 }
 
 .footer-list{
@@ -38,4 +47,27 @@ footer{
 .blob10{
     right: 20px;
     bottom: 20px;
+}
+
+@media screen and (min-width: 1366px) {
+    .footer-wrapper{
+        flex-flow: row;
+        justify-content: space-between;
+        height: 100px;
+        max-height: unset;
+    }    
+
+    .footer-list{
+        flex-flow: row;
+    }
+
+    .blob9{
+        top: 0;
+    }
+    
+    .blob10{
+        right: 20px;
+        top: 0;
+    }
+    
 }
